# simplify-winrt-linux

./: CMakeLists.txt  app.manifest  font.h  main.cpp
cmake/toolchains/: mingw64-gcc.cmake
